# blockchain

./: .gitignore  config.py  ipv8_client.py
lab_2/: .gitignore  README.md  pyproject.toml
lab_2/config/: lab_client.example.json
lab_2/src/lab_group_client/: __init__.py  community.py  config.py  discover_members.py  keys.py  register_group.py  run_rounds.py
